--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,10 @@
   "cSpell.words": [
     "exégesis",
     "Filemón",
+    "Isidoro",
     "patrísticas",
-    "Timoteo"
+    "Timoteo",
+    "Tomás"
   ],
   "liveServer.settings.port": 5502
 }
