--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
   "cSpell.words": [
+    "desanimándonos",
     "exégesis",
+    "fatigándonos",
     "Filemón",
     "Isidoro",
     "patrísticas",
+    "Regocijémonos",
     "Timoteo",
     "Tomás"
   ],
