--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,18 @@
 {
   "cSpell.words": [
+    "Ambon",
+    "Ambón",
     "desanimándonos",
     "exégesis",
     "fatigándonos",
     "Filemón",
     "Isidoro",
     "patrísticas",
+    "Pilato",
+    "Poncio",
     "Regocijémonos",
     "Timoteo",
     "Tomás"
   ],
-  "liveServer.settings.port": 5502
+  "liveServer.settings.port": 5503
 }
