--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,17 +2,25 @@
   "cSpell.words": [
     "Ambon",
     "Ambón",
+    "Crisóstomo",
     "desanimándonos",
     "exégesis",
     "fatigándonos",
     "Filemón",
+    "Isaías",
     "Isidoro",
+    "Malaquías",
     "patrísticas",
+    "Patrístico",
+    "perícopa",
+    "perícopas",
     "Pilato",
     "Poncio",
     "Regocijémonos",
+    "salvífica",
     "Timoteo",
-    "Tomás"
+    "Tomás",
+    "ubicarlo"
   ],
   "liveServer.settings.port": 5503
 }
