--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,9 @@
     "Poncio",
     "Regocijémonos",
     "responsorial",
+    "SABAT",
     "salvífica",
+    "Scriptura",
     "Timoteo",
     "Tomás",
     "ubicarlo"
