--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     "Hech",
     "Isaías",
     "Isidoro",
+    "LECTIO",
     "Malaquías",
     "patrísticas",
     "Patrístico",
@@ -24,6 +25,7 @@
     "responsorial",
     "SABAT",
     "salvífica",
+    "SAULO",
     "Scriptura",
     "Timoteo",
     "Tomás",
