--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,7 +30,8 @@
     "Scriptura",
     "Timoteo",
     "Tomás",
-    "ubicarlo"
+    "ubicarlo",
+    "Yahwéh"
   ],
   "liveServer.settings.port": 5503
 }
