--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "Ambon",
     "Ambón",
     "ANÁMNESIS",
+    "Antioquía",
     "clarísimo",
     "Crisóstomo",
     "desanimándonos",
@@ -16,6 +17,7 @@
     "Malaquías",
     "Nazaret",
     "PATRISTICA",
+    "patrística",
     "patrísticas",
     "Patrístico",
     "perícopa",
@@ -30,6 +32,7 @@
     "salvífico",
     "SAULO",
     "Scriptura",
+    "sufrientes",
     "Timoteo",
     "Tomás",
     "ubicarlo",
