--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,16 @@
     "ANÁMNESIS",
     "Antioquía",
     "clarísimo",
+    "contínua",
     "Crisóstomo",
     "desanimándonos",
+    "Elías",
     "exégesis",
     "fatigándonos",
     "Filemón",
     "Hech",
+    "Hipona",
+    "inaugurador",
     "Isaías",
     "Isidoro",
     "LECTIO",
@@ -36,7 +40,8 @@
     "Timoteo",
     "Tomás",
     "ubicarlo",
-    "Yahwéh"
+    "Yahwéh",
+    "Zebedeo"
   ],
   "liveServer.settings.port": 5503
 }
