--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "ANÁMNESIS",
     "Antioquía",
     "clarísimo",
+    "CONTEMPLATIO",
     "contínua",
     "Crisóstomo",
     "desanimándonos",
@@ -19,6 +20,7 @@
     "Isidoro",
     "LECTIO",
     "Malaquías",
+    "Matías",
     "Nazaret",
     "PATRISTICA",
     "patrística",
@@ -36,6 +38,7 @@
     "salvífico",
     "SAULO",
     "Scriptura",
+    "sinópticos",
     "sufrientes",
     "Timoteo",
     "Tomás",
