--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,7 +44,9 @@
     "Scriptura",
     "sinópticos",
     "Solm",
+    "sufriente",
     "sufrientes",
+    "teofánico",
     "Timoteo",
     "Tomás",
     "ubicarlo",
