--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,58 +2,120 @@
   "cSpell.words": [
     "Ambon",
     "Ambón",
+    "Ambrosio",
+    "Anagógico",
     "ANÁMNESIS",
     "Antioquía",
+    "Atanasio",
+    "axios",
+    "Benedicto",
+    "Bernabé",
+    "Calcuta",
+    "CAMOTE",
+    "catequéticos",
+    "Cervera",
+    "CERVERA",
+    "Cipriano",
     "clarísimo",
+    "CODEIUM",
     "CONTEMPLATIO",
     "contínua",
     "Crisóstomo",
+    "Cristocéntrica",
+    "Cristología",
+    "cristológica",
+    "Crucis",
+    "culantro",
     "desanimándonos",
+    "desconexión",
+    "deséchalo",
+    "desestructuración",
+    "deuterocanónicos",
+    "Deuteronomio",
+    "devocionales",
+    "diastólica",
+    "Éfeso",
+    "elevadísima",
     "Elías",
+    "endorfinas",
+    "escatológica",
     "exégesis",
+    "Ezequiel",
     "fatigándonos",
     "Filemón",
+    "GITHUB",
+    "glucometro",
     "Gradualidad",
     "habitus",
     "Hech",
+    "hidrogenados",
     "Hipona",
     "IGMR",
     "inaugurador",
     "inspirándola",
     "Isaías",
     "Isidoro",
+    "Jehová",
+    "Jerusalén",
+    "Jonás",
+    "Lectio",
     "LECTIO",
     "Malaquías",
+    "Mariología",
     "Matías",
+    "MONITOREO",
     "Nazaret",
+    "Nicea",
     "Oratio",
+    "ORATIO",
+    "ortopraxis",
+    "palta",
+    "PARADOSIS",
     "PATRISTICA",
     "patrística",
+    "Patrística",
     "patrísticas",
     "Patrístico",
+    "patrísticos",
+    "Pentateuco",
+    "Pentecostés",
+    "perfúmate",
     "pericopa",
     "perícopa",
     "perícopas",
     "Pilato",
     "Poncio",
     "PUCUSANA",
+    "quinua",
     "redirección",
     "Regocijémonos",
+    "rehúyele",
     "responsorial",
     "SABAT",
     "salvífica",
+    "Salvífica",
     "salvífico",
     "SAULO",
     "Scriptura",
+    "searchs",
     "sinópticos",
+    "Sistólica",
     "Solm",
     "STATIO",
+    "STUDIUM",
     "sufriente",
     "sufrientes",
     "teofánico",
+    "Teológicamente",
     "Timoteo",
     "Tomás",
     "ubicarlo",
+    "UBIGEO",
+    "vitalis",
+    "vuetify",
+    "vuex",
+    "Vulgata",
+    "VULGATA",
     "Yahwéh",
     "Zebedeo"
   ],
