--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "ANÁMNESIS",
     "Antioquía",
     "Atanasio",
+    "autocorrección",
     "axios",
     "Benedicto",
     "Bernabé",
@@ -43,12 +44,14 @@
     "Ezequiel",
     "fatigándonos",
     "Filemón",
+    "Gálatas",
     "GITHUB",
     "glucometro",
     "Gradualidad",
     "habitus",
     "Hech",
     "hidrogenados",
+    "hiperbolización",
     "Hipona",
     "IGMR",
     "inaugurador",
@@ -58,11 +61,13 @@
     "Jehová",
     "Jerusalén",
     "Jonás",
+    "LBLA",
     "Lectio",
     "LECTIO",
     "Malaquías",
     "Mariología",
     "Matías",
+    "matítica",
     "MONITOREO",
     "Nazaret",
     "Nicea",
@@ -77,6 +82,7 @@
     "patrísticas",
     "Patrístico",
     "patrísticos",
+    "paulinas",
     "Pentateuco",
     "Pentecostés",
     "perfúmate",
@@ -105,8 +111,10 @@
     "STUDIUM",
     "sufriente",
     "sufrientes",
+    "temáticamente",
     "teofánico",
     "Teológicamente",
+    "textualidad",
     "Timoteo",
     "Tomás",
     "ubicarlo",
