--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "Alejandría",
     "Ambon",
     "Ambón",
     "Ambrosio",
@@ -40,6 +41,7 @@
     "Elías",
     "endorfinas",
     "escatológica",
+    "escatológico",
     "exégesis",
     "Ezequiel",
     "fatigándonos",
@@ -49,6 +51,7 @@
     "glucometro",
     "Gradualidad",
     "habitus",
+    "hacédselas",
     "Hech",
     "hidrogenados",
     "hiperbolización",
