--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "actibus",
     "Alejandría",
     "Ambon",
     "Ambón",
@@ -22,6 +23,8 @@
     "CODEIUM",
     "CONTEMPLATIO",
     "contínua",
+    "Conversio",
+    "CONVERSIO",
     "Crisóstomo",
     "Cristocéntrica",
     "Cristología",
@@ -36,6 +39,11 @@
     "Deuteronomio",
     "devocionales",
     "diastólica",
+    "Didajé",
+    "Directio",
+    "DISCERNERE",
+    "Discernimentum",
+    "Divinum",
     "Éfeso",
     "elevadísima",
     "Elías",
@@ -44,6 +52,7 @@
     "escatológico",
     "exégesis",
     "Ezequiel",
+    "facere",
     "fatigándonos",
     "Filemón",
     "Gálatas",
@@ -58,6 +67,7 @@
     "Hipona",
     "IGMR",
     "inaugurador",
+    "Inceptum",
     "inspirándola",
     "Isaías",
     "Isidoro",
@@ -68,9 +78,12 @@
     "Lectio",
     "LECTIO",
     "Malaquías",
+    "Manens",
     "Mariología",
     "Matías",
     "matítica",
+    "meis",
+    "meum",
     "MONITOREO",
     "Nazaret",
     "Nicea",
@@ -96,6 +109,8 @@
     "Poncio",
     "PUCUSANA",
     "quinua",
+    "Quotidianis",
+    "radicalidad",
     "redirección",
     "Regocijémonos",
     "rehúyele",
@@ -107,6 +122,7 @@
     "SAULO",
     "Scriptura",
     "searchs",
+    "sígame",
     "sinópticos",
     "Sistólica",
     "Solm",
@@ -114,6 +130,8 @@
     "STUDIUM",
     "sufriente",
     "sufrientes",
+    "Summarium",
+    "sustentans",
     "temáticamente",
     "teofánico",
     "Teológicamente",
