--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,7 @@
     "Gradualidad",
     "habitus",
     "hacédselas",
+    "hanc",
     "Hech",
     "hidrogenados",
     "hiperbolización",
@@ -68,6 +69,7 @@
     "IGMR",
     "inaugurador",
     "Inceptum",
+    "Ingredere",
     "inspirándola",
     "Isaías",
     "Isidoro",
@@ -79,6 +81,7 @@
     "LECTIO",
     "Malaquías",
     "Manens",
+    "mansionem",
     "Mariología",
     "Matías",
     "matítica",
@@ -122,6 +125,7 @@
     "SAULO",
     "Scriptura",
     "searchs",
+    "sequentem",
     "sígame",
     "sinópticos",
     "Sistólica",
@@ -138,6 +142,7 @@
     "textualidad",
     "Timoteo",
     "Tomás",
+    "Transi",
     "ubicarlo",
     "UBIGEO",
     "vitalis",
