--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
     "Atanasio",
     "autocorrección",
     "axios",
+    "Bblicamente",
     "Benedicto",
     "Bernabé",
     "Calcuta",
@@ -21,6 +22,7 @@
     "Cipriano",
     "clarísimo",
     "CODEIUM",
+    "confesarlas",
     "CONTEMPLATIO",
     "contínua",
     "Conversio",
@@ -131,6 +133,7 @@
     "Sistólica",
     "Solm",
     "STATIO",
+    "Stgo",
     "STUDIUM",
     "sufriente",
     "sufrientes",
