--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,7 @@
     "Ezequiel",
     "facere",
     "fatigándonos",
+    "febricitante",
     "Filemón",
     "Gálatas",
     "GITHUB",
@@ -92,6 +93,7 @@
     "MONITOREO",
     "Nazaret",
     "Nicea",
+    "Omne",
     "Oratio",
     "ORATIO",
     "ortopraxis",
@@ -132,6 +134,7 @@
     "sinópticos",
     "Sistólica",
     "Solm",
+    "soteriológica",
     "STATIO",
     "Stgo",
     "STUDIUM",
