--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
     "Cipriano",
     "clarísimo",
     "CODEIUM",
+    "comprenderla",
     "confesarlas",
     "CONTEMPLATIO",
     "contínua",
@@ -91,6 +92,7 @@
     "meis",
     "meum",
     "MONITOREO",
+    "Mutatione",
     "Nazaret",
     "Nicea",
     "Omne",
