--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "cSpell.words": [
     "actibus",
     "Alejandría",
+    "Alfeo",
     "Ambon",
     "Ambón",
     "Ambrosio",
@@ -83,6 +84,7 @@
     "LBLA",
     "Lectio",
     "LECTIO",
+    "Leví",
     "Malaquías",
     "Manens",
     "mansionem",
@@ -131,6 +133,7 @@
     "SAULO",
     "Scriptura",
     "searchs",
+    "seguirle",
     "sequentem",
     "sígame",
     "sinópticos",
@@ -153,6 +156,7 @@
     "Transi",
     "ubicarlo",
     "UBIGEO",
+    "veterotestamentarios",
     "vitalis",
     "vuetify",
     "vuex",
