--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,9 @@
     "diastólica",
     "Didajé",
     "Directio",
+    "Disce",
+    "Discere",
+    "DISCERE",
     "DISCERNERE",
     "Discernimentum",
     "Divinum",
@@ -85,6 +88,7 @@
     "Lectio",
     "LECTIO",
     "Leví",
+    "Linguam",
     "Malaquías",
     "Manens",
     "mansionem",
@@ -92,6 +96,7 @@
     "Matías",
     "matítica",
     "meis",
+    "METHODUS",
     "meum",
     "MONITOREO",
     "Mutatione",
