--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "cSpell.words": [
     "actibus",
+    "Agnoscere",
     "Alejandría",
     "Alfeo",
     "Ambon",
@@ -15,6 +16,7 @@
     "Bblicamente",
     "Benedicto",
     "Bernabé",
+    "bíblicamente",
     "Calcuta",
     "CAMOTE",
     "catequéticos",
@@ -50,6 +52,7 @@
     "DISCERE",
     "DISCERNERE",
     "Discernimentum",
+    "DISCRETIO",
     "Divinum",
     "Éfeso",
     "elevadísima",
@@ -67,6 +70,8 @@
     "GITHUB",
     "glucometro",
     "Gradualidad",
+    "Gratiam",
+    "habitatio",
     "habitus",
     "hacédselas",
     "hanc",
@@ -91,11 +96,13 @@
     "Linguam",
     "Malaquías",
     "Manens",
+    "Mansio",
     "mansionem",
     "Mariología",
     "Matías",
     "matítica",
     "meis",
+    "memorizable",
     "METHODUS",
     "meum",
     "MONITOREO",
@@ -121,8 +128,10 @@
     "pericopa",
     "perícopa",
     "perícopas",
+    "Permanens",
     "Pilato",
     "Poncio",
+    "PROGRESSUS",
     "PUCUSANA",
     "quinua",
     "Quotidianis",
@@ -130,6 +139,7 @@
     "redirección",
     "Regocijémonos",
     "rehúyele",
+    "replicabilidad",
     "responsorial",
     "SABAT",
     "salvífica",
@@ -139,6 +149,7 @@
     "Scriptura",
     "searchs",
     "seguirle",
+    "Seleccionabilidad",
     "sequentem",
     "sígame",
     "sinópticos",
@@ -163,6 +174,7 @@
     "UBIGEO",
     "veterotestamentarios",
     "vitalis",
+    "voluntarista",
     "vuetify",
     "vuex",
     "Vulgata",
