--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,7 @@
     "IGMR",
     "inaugurador",
     "Inceptum",
+    "INCREMENTI",
     "Ingredere",
     "inspirándola",
     "Isaías",
@@ -132,6 +133,7 @@
     "Pilato",
     "Poncio",
     "PROGRESSUS",
+    "Prooemium",
     "PUCUSANA",
     "quinua",
     "Quotidianis",
@@ -172,6 +174,7 @@
     "Transi",
     "ubicarlo",
     "UBIGEO",
+    "UNITATIS",
     "veterotestamentarios",
     "vitalis",
     "voluntarista",
