--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "Ambon",
     "Ambón",
     "Ambrosio",
+    "AMORIS",
     "Anagógico",
     "ANÁMNESIS",
     "Antioquía",
@@ -147,6 +148,7 @@
     "SABAT",
     "salvífica",
     "Salvífica",
+    "salvíficas",
     "salvífico",
     "SAULO",
     "Scriptura",
@@ -164,6 +166,7 @@
     "STUDIUM",
     "sufriente",
     "sufrientes",
+    "Suggestio",
     "Summarium",
     "sustentans",
     "temáticamente",
