--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,7 @@
     "Éfeso",
     "elevadísima",
     "Elías",
+    "Eligere",
     "endorfinas",
     "escatológica",
     "escatológico",
@@ -169,6 +170,7 @@
     "sufrientes",
     "Suggestio",
     "Summarium",
+    "Summo",
     "sustentans",
     "temáticamente",
     "teofánico",
