--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,6 +87,7 @@
     "Inceptum",
     "INCREMENTI",
     "Ingredere",
+    "Initium",
     "inspirándola",
     "Isaías",
     "Isidoro",
@@ -135,11 +136,14 @@
     "Permanens",
     "Pilato",
     "Poncio",
+    "Precatio",
     "Processus",
     "PROGRESSUS",
     "Prooemium",
+    "PROPOSITUM",
     "PUCUSANA",
     "quinua",
+    "Quotidiana",
     "Quotidianis",
     "radicalidad",
     "redirección",
