--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "bíblicamente",
     "Calcuta",
     "CAMOTE",
+    "Caritate",
     "catequéticos",
     "Cervera",
     "CERVERA",
@@ -56,6 +57,7 @@
     "Discernimentum",
     "DISCRETIO",
     "Divinum",
+    "Donum",
     "Éfeso",
     "elevadísima",
     "Elías",
@@ -115,6 +117,7 @@
     "Nazaret",
     "Nicea",
     "Omne",
+    "Omnes",
     "Oratio",
     "ORATIO",
     "ortopraxis",
@@ -141,6 +144,7 @@
     "PROGRESSUS",
     "Prooemium",
     "PROPOSITUM",
+    "Proximus",
     "PUCUSANA",
     "quinua",
     "Quotidiana",
@@ -163,6 +167,7 @@
     "Seleccionabilidad",
     "sequentem",
     "sígame",
+    "Simus",
     "sinópticos",
     "Sistólica",
     "Solm",
@@ -182,6 +187,7 @@
     "textualidad",
     "Timoteo",
     "Tomás",
+    "Totus",
     "Transi",
     "ubicarlo",
     "UBIGEO",
