--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
     "endorfinas",
     "escatológica",
     "escatológico",
+    "evaluables",
     "exégesis",
     "Ezequiel",
     "facere",
@@ -110,6 +111,7 @@
     "matítica",
     "meis",
     "memorizable",
+    "Methodus",
     "METHODUS",
     "meum",
     "MONITOREO",
@@ -162,6 +164,7 @@
     "salvíficas",
     "salvífico",
     "SAULO",
+    "SCIENTIA",
     "Scriptura",
     "searchs",
     "seguirle",
